==> Tomosawa/MYNOVA-SmartPower/MYNOVA_POWER/pmbus.cpp <==
#define DIAGNOSTICS 1
#include "pmbus.h"
#include <ArduinoJson.h>
#define PMBUS_ADDRESS 0x58
#define MFR_ID 0x99
#define MFR_MODEL 0x9A
#define MFR_REVISION 0x9B
#define MFR_LOCATION 0x9C
#define MFR_DATE 0x9D
#define MFR_SERIAL 0x9E
#define MFR_VIN_MIN 0xA0
#define MFR_VIN_MAX 0xA1
#define MFR_IIN_MAX 0xA2
#define MFR_PIN_MAX 0xA3
#define MFR_VOUT_MIN 0xA4
#define MFR_VOUT_MAX 0xA5
#define MFR_IOUT_MAX 0xA6
#define MFR_POUT_MAX 0xA7
#define MFR_TAMBIENT_MAX 0xA8
#define MFR_TAMBIENT_MIN 0xA9
#define READ_EIN 0x86
#define READ_EOUT 0x87
#define READ_VIN 0x88
#define READ_IIN 0x89
#define READ_VCAP 0x8A
#define READ_VOUT 0x8B
#define READ_IOUT 0x8C
#define READ_POUT 0x96
#define READ_PIN 0x97
#define READ_TEMPERATURE_1 0x8D
#define READ_TEMPERATURE_2 0x8E
#define READ_TEMPERATURE_3 0x8F
#define READ_FAN_SPEED_1 0x90
#define VOUT_COMMAND 0x21
#define VOUT_MAX 0x24
#define FAN_COMMAND_1 0x3B
#define VOUT_OV_FAULT_LIMIT 0x40
#define VOUT_OV_FAULT_RESPONSE 0x41
#define VOUT_OV_WARN_LIMIT 0x42
#define VOUT_UV_FAULT_LIMIT 0x44
#define VOUT_UV_FAULT_RESPONSE 0x45
#define IOUT_OC_FAULT_LIMIT 0x46
#define IOUT_OC_FAULT_RESPONSE 0x47
#define IOUT_OC_WARN_LIMIT 0x4A
#define OT_FAULT_LIMIT 0x4F
#define OT_FAULT_RESPONSE 0x50
#define OT_WARN_LIMIT 0x51
#define VIN_OV_FAULT_LIMIT 0x55
#define VIN_UV_W ARN_LIMIT 0x58
#define VIN_UV_FAULT_LIMIT 0x59
#define COEFFICIENTS 0x30
#define VOUT_MODE 0x20

int PMBus::init(int pson_pin, int pskill_pin, Stream *Debug_Serial, TwoWire *i2c)
{
  PSON_PIN = pson_pin;
  PSKILL_PIN = pskill_pin;
  Debug = Debug_Serial;

  if (i2c)
  {
    I2C = i2c;
  }

  pinMode(PSON_PIN, OUTPUT);
  pinMode(PSKILL_PIN, OUTPUT);

  delay(500);

  if (Debug)
  {
    Debug->print("\r\nPMBus::init() complete\r\n");
  }

  return 0;
}

int PMBus::scan()
{
  // 判断时间间隔1秒才执行
  static u_long last_scan = 0;
  u_long msecs = millis();
  if ((msecs - last_scan) < 1000)
  {
    return 0;
  }
  last_scan = msecs;

  // 判断设备是否在线
  if (!checkDeviceOnline())
  {
    return 0;
  }

  // 读取厂商信息，仅一次
  if (!bReadMFR)
  {
    readMFR();
    // 同时读取只需要读一次的参数
    isVOutLinear = GetVOutFormat();
    Debug->print("VOUT isLinearFormat=");
    Debug->println(isVOutLinear);

    exponent = readVoutMode(VOUT_MODE);
    Debug->print("VOUT exponent=");
    Debug->println(exponent);

    // 读取 COEFFICIENTS
    readCoefficients(COEFFICIENTS, &coeff);

    uint8_t fanconfig = read_byte(0x3A);
    Debug->println(String(fanconfig,BIN));
  }

  delay(1);
  E_in = read_linear(READ_EIN);

  delay(1);
  E_out = read_linear(READ_EOUT);

  delay(1);
  V_in = read_linear(READ_VIN);

  delay(1);
  I_in = read_linear(READ_IIN);

  delay(1);
  W_in = read_linear(READ_PIN);

  delay(1);
  V_out = read_linear16(READ_VOUT) / 1000.0;

  delay(1);
  I_out = read_linear(READ_IOUT);

  delay(1);
  W_out = read_linear(READ_POUT);

  delay(1);
  T[0] = read_linear(READ_TEMPERATURE_1);

  delay(1);
  T[1] = read_linear(READ_TEMPERATURE_2);

  delay(1);
  T[2] = read_linear(READ_TEMPERATURE_3);

  delay(1);
  fan[0] = read_linear(READ_FAN_SPEED_1);

  delay(1);
  readFanCommand();

  return 1;
}

void PMBus::clear_faults()
{

  I2C->beginTransmission(PMBUS_ADDRESS);
  I2C->write(0x03);
  I2C->endTransmission(true);
}

void PMBus::write_byte(uint8_t reg, uint8_t value)
{
  I2C->beginTransmission(PMBUS_ADDRESS);
  I2C->write(reg);
  I2C->write(value);
  I2C->endTransmission(true);
}

uint8_t PMBus::read_byte(uint8_t reg)
{
  I2C->beginTransmission(PMBUS_ADDRESS);
  I2C->write(reg);
  I2C->endTransmission(false);

  I2C->requestFrom(PMBUS_ADDRESS, 1, 1);

  return I2C->read();
}

uint16_t PMBus::read_word(uint8_t reg)
{
  I2C->beginTransmission(PMBUS_ADDRESS);
  I2C->write(reg);
  I2C->endTransmission(false);

  I2C->requestFrom(PMBUS_ADDRESS, 2);

  uint16_t dataRaw = 0;
  if (I2C->available() >= 2)
  {
    // 读取高字节和低字节
    uint8_t lowByte = I2C->read();
    uint8_t highByte = I2C->read();
    // 将高字节和低字节组合为16位的原始值
    dataRaw = (highByte << 8) | lowByte;
  }
  return dataRaw;
}

void PMBus::read_block(uint8_t reg, int bytes, uint8_t *buffer)
{
  I2C->beginTransmission(PMBUS_ADDRESS);
  I2C->write(reg);
  I2C->endTransmission(false);

  I2C->requestFrom(PMBUS_ADDRESS, bytes, 1);

  for (int i = 0; i < bytes; ++i)
  {
    buffer[i] = I2C->read();
  }
}

float PMBus::read_linear(uint8_t reg)
{
  uint16_t linear;

  linear = read_word(reg);
  // Debug->print("Read register: 0x");
  // Debug->println(reg, HEX);

  return linear11ToFloat(linear);
}

float PMBus::ulinear16ToFloat(uint16_t data)
{
  uint16_t dec_data = convertHex2Dec(data);
  return dec_data * pow(2, exponent);
}

int8_t PMBus::readVoutMode(uint8_t reg)
{

  I2C->beginTransmission(PMBUS_ADDRESS);
  I2C->write(reg); // 请求VOUT_MODE寄存器
  I2C->endTransmission(false);

  I2C->requestFrom(PMBUS_ADDRESS, 1); // 请求1字节数据

  // 确保有数据可读，避免潜在的问题
  if (I2C->available() < 1)
  {
    Serial.println("Error: No data available from VOUT_MODE register");
    return 0; // 错误处理，返回 0 或其他默认值
  }

  uint8_t voutMode = I2C->read(); // 读取VOUT_MODE寄存器的值

  // VOUT_MODE 的低5位包含比例因子指数（通常表示为2的幂）
  uint8_t exponent = voutMode & 0x1F;
  if (exponent > 15)
  {
    exponent = exponent - 32; // 如果指数是负数，进行调整
  }
  return exponent;
}

void PMBus::readCoefficients(uint8_t reg, Coefficient_t *coeff)
{
  // byte regCS = ((0xFF - (reg + (PMBUS_ADDRESS << 1))) + 1) & 0xFF;
  // I2C->beginTransmission(PMBUS_ADDRESS);
  // I2C->write(reg);
  // I2C->write(regCS);
  // I2C->endTransmission(false);

  // I2C->requestFrom(PMBUS_ADDRESS, 5, 1);

  // uint8_t byte1 = I2C->read();
  // uint8_t byte2 = I2C->read();
  // uint8_t byte3 = I2C->read();
  // uint8_t byte4 = I2C->read();
  // uint8_t byte5 = I2C->read();

  // coeff->m = byte1 | (byte2 << 8);
  // coeff->b = byte3 | (byte4 << 8);
  // coeff->R = byte5;
  I2C->beginTransmission(PMBUS_ADDRESS);
  I2C->write(reg); // COEFFICIENTS 命令地址
  I2C->endTransmission(false);

  I2C->requestFrom(PMBUS_ADDRESS, 6); // 请求 6 字节的数据

  if (I2C->available() < 6)
  {
    Serial.println("Error: Insufficient data available for COEFFICIENTS");
    return;
  }

  // 读取 M, B 和 R 值
  coeff->m = (I2C->read() | (I2C->read() << 8)); // 读取 2 字节 M
  coeff->b = (I2C->read() | (I2C->read() << 8)); // 读取 2 字节 B
  coeff->R = I2C->read();                        // 读取 1 字节 R
  I2C->read();

  Debug->print("Coefficient_M: ");
  Debug->println(coeff->m);
  Debug->print("Coefficient_B: ");
  Debug->println(coeff->b);
  Debug->print("Coefficient_R: ");
  Debug->println(coeff->R);
}

void PMBus::readMFR()
{
  mfr_id = read_string(MFR_ID);
  delay(1);
  mfr_model = read_string(MFR_MODEL);
  delay(1);
  mfr_revision = read_string(MFR_REVISION);
  delay(1);
  mfr_location = read_string(MFR_LOCATION);
  delay(1);
  mfr_date = read_string(MFR_DATE);
  delay(1);
  mfr_serial = read_string(MFR_SERIAL);
  delay(1);

  bReadMFR = true;

#if DIAGNOSTICS
  if (Debug)
  {
    Debug->println("manf.:    " + mfr_id);
    Debug->println("model:    " + mfr_model);
    Debug->println("revision: " + mfr_revision);
    Debug->println("location: " + mfr_location);
    Debug->println("date:     " + mfr_date);
    Debug->println("serial:   " + mfr_serial);
  }
#endif
}
